crates/runtime-search/src/snapshots/runtime_search__types__tests__transpose_and_convert_single_column.snap
---
source: crates/runtime-search/src/types.rs
expression: sort_result(transpose_and_convert(column_format))
snapshot_kind: text
---
[
  [
    [
      "key1",
      [
        "A"
      ]
    ]
  ],
  [
    [
      "key1",
      [
        "B"
      ]
    ]
  ],
  []
]
